--- a/report/report.tex
+++ b/report/report.tex
@@ -221,7 +221,8 @@ For sake of visualization, a set of smaller tests was run, in addition to the pa
 macro from the \textit{Threads.jl} package on the root tracking \texttt{for} loop in the file \hyperref[sec:listing]{solve.jl}); however the multi-threaded runs didn't improve the
 performance on these smaller systems, as the overhead of the multi-threading was too big compared to the actual computation time.
 
-% TODO: introduce conclusions about parallelization
+\ldots
+perhaps because of our choice of predictor-corrector which could be unsuitable for larger systems.
 
 The Julia implementation for the tests described above can be found in Appendix \hyperref[sec:listing]{B}.
 
